--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
 
                     <div class="about-col-2">
                         <h1 class="sub-title animate-pulse">About me</h1>
-                        <h3>I am a front-end developer, Document controller, Product manager, Digital Marketer.</h3>
-                        <p>My name is Cynthia John Echemeozor, i am a passionate frontend web developer with a strong love for crafting visually appealing and user-friendly websites. With a solid foundation in HTML, CSS, Bootstrap, JavaScript, and React, I thrive on transforming design concepts into interactive and engaging digital experiences. I'm also passionate about collaborating on exciting projects and helping businesses thrive in the digital landscape. Whether you require a visually stunning website, impeccable document control, product innovation, or digital excellence, I am here to make it happen.</p>
+                        <h3>My name is Cynthia John Echemeozor</h3>
+                        <p>As a seasoned professional adept in the fields of <b>frontend development, document controller, product management, and digital marketer</b>, I boast a wealth of experience spanning several years. My expertise lies in HTML, CSS,  Bootstrap, JavaScript, and React enabling me to craft seamless and user-friendly websites. Moreover, my skills extend to effective <b>document management</b>, ensuring smooth project workflows and compliance.  <br>
+
+                        In <b>product management</b>, I thrive on strategizing and overseeing the entire product lifecycle, from conception to launch. My innate ability to analyze market trends and customer insights enables me to deliver products that truly resonate with the target audience. 
+
+                        As a <b>digital marketer</b>, I possess a creative flair and data-driven approach that fuels my success in devising compelling campaigns across various platforms. Proficient in Adobe Photoshop, Illustrator, and Canva, I bring captivating visuals to marketing</p> 
 
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -107,29 +111,29 @@
                     <div class="services-list">
                         <div>
                             <i class='bx bxs-user box'></i>
-                            <h2>Web Design</i></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit praesentium eligendi at optio molestiae corporis perferendis in accusamus ex commodi?</p>
+                            <h2>Web Development</i></h2>
+                            <p>Armed with a passion for creating visually appealing and user-friendly interfaces, I honed my HTML, CSS, and JavaScript skills. I worked collaboratively with designers and back-end developers to bring web applications to life, ensuring seamless user experiences and optimal performance across various devices and browsers.</p>
                             <a href="">Learn more</a>
                         </div>
 
                         <div>
                             <i class='bx bxs-user box'></i>
-                            <h2>Web Design</i></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit praesentium eligendi at optio molestiae corporis perferendis in accusamus ex commodi?</p>
+                            <h2>Document Controller</i></h2>
+                            <p>Embracing my organizational prowess, I manage critical project documents and information, ensuring version control, accessibility, and compliance with industry standards. My meticulous approach to document management proved essential in maintaining project timelines, fostering transparency, and mitigating potential risks.</p>
                             <a href="">Learn more</a>
                         </div>
 
                         <div>
                             <i class='bx bxs-user box'></i>
-                            <h2>Web Design</i></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit praesentium eligendi at optio molestiae corporis perferendis in accusamus ex commodi?</p>
+                            <h2>Product Manager</i></h2>
+                            <p>As a product advocate, I combined customer insights, market research, and technical expertise to develop a comprehensive product strategy.My tenure as a Product Manager taught me the art of prioritization, agile methodologies, and the critical ability to adapt to dynamic market demands.</p>
                             <a href="">Learn more</a>
                         </div>
 
                         <div>
                             <i class='bx bxs-user box'></i>
-                            <h2>Web Design</i></h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit praesentium eligendi at optio molestiae corporis perferendis in accusamus ex commodi?</p>
+                            <h2>Digital Marketer</i></h2>
+                            <p>I honed my skills in SEO, content marketing, social media management, and email campaigns. My creative flair, coupled with data-driven decision-making, allowed me to craft compelling marketing strategies that boosted brand visibility and engaged target audiences.</p>
                             <a href="">Learn more</a>
                         </div>
                     </div>
@@ -145,8 +149,8 @@
                     <div class="work">
                         <img src="images/soft-engineering-site.png">
                         <div class="layer">
-                            <h3>Web Development</h3>
-                            <p>Proficient in HTML, CSS, and JavaScript, I create visually appealing and user-friendly websites. I prioritize responsive design and stay updated on industry trends to deliver exceptional user experiences.</p>
+                            <h3>Engineering Website</h3>
+                            <p>This websites provides comprehensive and innovative solutions, showcasing cutting-edge projects, and fostering a collaborative platform for industry professionals and enthusiasts alike."</p>
                             <a href=""><i class='bx bxs-user box'></i></a>
                         </div>
                     </div>
@@ -154,8 +158,8 @@
                     <div class="work">
                         <img src="images/w3s-worktemplate.png">
                         <div class="layer">
-                            <h3>Web Development</h3>
-                            <p>Proficient in HTML, CSS, and JavaScript, I create visually appealing and user-friendly websites. I prioritize responsive design and stay updated on industry trends to deliver exceptional user experiences.</p>
+                            <h3>Homepage Templates</h3>
+                            <p>The home page template I built offers a captivating and user-friendly design, featuring seamless navigation and engaging visuals to create a compelling online presence for businesses and individuals.</p>
                             <a href=""><i class='bx bxs-user box'></i></a>
                         </div>
                     </div>
@@ -163,8 +167,8 @@
                     <div class="work">
                         <img src="images/portfolio-website.png">
                         <div class="layer">
-                            <h3>Web Development</h3>
-                            <p>Proficient in HTML, CSS, and JavaScript, I create visually appealing and user-friendly websites. I prioritize responsive design and stay updated on industry trends to deliver exceptional user experiences.</p>
+                            <h3>My Portfolio</h3>
+                            <p>"My portfolio showcases a diverse collection of my work, highlighting my expertise, with a focus on creating impactful user experiences and successful project outcomes."</p>
                             <a href=""><i class='bx bxs-user box'></i></a>
                         </div>
                     </div>
@@ -172,8 +176,8 @@
                     <div class="work">
                         <img src="images/Nysc-workclone.png">
                         <div class="layer">
-                            <h3>Web Development</h3>
-                            <p>Proficient in HTML, CSS, and JavaScript, I create visually appealing and user-friendly websites. I prioritize responsive design and stay updated on industry trends to deliver exceptional user experiences.</p>
+                            <h3>NYSC</h3>
+                            <p>Recreated Our NYSC website  which serves as an official platform providing essential information, updates, and resources for participants of the National Youth Service Corps program.</p>
                             <a href=""><i class='bx bxs-user box'></i></a>
                         </div>
                     </div>
@@ -198,14 +202,16 @@
                             <a href=""><i class='bx bxs-user box'></i></a>
                             <a href=""><i class='bx bxs-user box'></i></a>
                         </div>
-                        <a href="images/Successtablet.pdf" download class="btn">Download CV</a>
+                        <a href="images/my cv.pdf" download class="btn">Download CV</a>
                     </div>
+                    
                     <!-- this  is for the form -->
                     <div class="contact-right">
-                        <form>
-                            <input type="text" name="Name" placeholder="Your Name" required>
-                            <input type="email" name="Email" placeholder="Your Email" required>
-                            <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <form action="https://formlinx.onrender.com/api/form/P5VanFLWQ" 
+                        method="post">
+                            <input type="text" name="name" placeholder="Your Name" required>
+                            <input type="email" name="email" placeholder="Your Email" required>
+                            <textarea name="message" rows="6" placeholder="Your Message"></textarea>
                             <button type="submit" class="btn">Submit</button>
                         </form>
                     </div>
